[gd_scene load_steps=5 format=3 uid="uid://dkd2hrsicq5ft"]

[ext_resource type="Texture2D" uid="uid://bem02g4lxta1a" path="res://assets/backgrounds/MainMenu.png" id="1_dqnpd"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_g265n"]
[ext_resource type="Theme" uid="uid://c1vds42xiuak4" path="res://assets/interactables/buttons.tres" id="2_m1fgp"]
[ext_resource type="Texture2D" uid="uid://wuwitignjtml" path="res://assets/backgrounds/MenuRank.png" id="4_gh3wq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_g265n")

[node name="MainMenu" type="Sprite2D" parent="."]
position = Vector2(361, 721)
scale = Vector2(1, 1.33519)
texture = ExtResource("1_dqnpd")

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 1286.0
offset_right = 221.0
offset_bottom = 1423.0
theme = ExtResource("2_m1fgp")
disabled = true
text = "Menu
"

[node name="SummonButton" type="Button" parent="."]
layout_mode = 0
offset_left = 229.0
offset_top = 1269.0
offset_right = 510.0
offset_bottom = 1427.0
theme = ExtResource("2_m1fgp")
text = "Summon"

[node name="CListButton" type="Button" parent="."]
layout_mode = 0
offset_left = 511.0
offset_top = 1278.0
offset_right = 706.0
offset_bottom = 1430.0
theme = ExtResource("2_m1fgp")
text = "Character List
"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 905.0
offset_right = 715.0
offset_bottom = 1166.0
theme = ExtResource("2_m1fgp")
text = "PLAY
"

[node name="MenuRank" type="Sprite2D" parent="."]
position = Vector2(355, 105)
scale = Vector2(2.45333, 1.93)
texture = ExtResource("4_gh3wq")

[connection signal="pressed" from="SummonButton" to="." method="_on_summon_button_pressed"]
[connection signal="pressed" from="CListButton" to="." method="_on_c_list_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
